<resources>
	
	<!-- Project level resources -->
	<string name="app_name">Spacebook</string>
	
	<!-- WelcomeActivity -->
	<string name="welcome_activity_title"></string>
	<string name="welcome_activity_spacebook_text_view_text">Spacebook</string>
	<string name="welcome_activity_conquer_the_stars_text_view_text">Conquer the stars\nfrom behind the screen.</string>
	<string name="welcome_activity_sign_up_button_text">SIGN UP</string>
	<string name="welcome_activity_log_in_button_text">LOG IN</string>
	<string name="welcome_activity_supernova_studio_text_view_text">© 2050 Supernova Studio</string>
	
	<!-- LoginActivity -->
	<string name="login_activity_title"></string>
	<string name="login_activity_log_in_text_view_text">Log in</string>
	<string name="login_activity_welcome_back_text_view_text">Welcome back.\nThe galaxy awaits you.</string>
	<string name="login_activity_your_nickname_edit_text_hint">Your nickname</string>
	<string name="login_activity_your_password_edit_text_hint">Your password</string>
	<string name="login_activity_login_button_text">LOG IN</string>
	<string name="login_activity_forgot_your_password_button_text">Forgot your password?</string>
	
	<!-- SignupActivity -->
	<string name="signup_activity_title"></string>
	<string name="signup_activity_sign_up_text_view_text">Sign up</string>
	<string name="signup_activity_it_sfree_text_view_text">It’s free and always will be.\nBecause advertisement.</string>
	<string name="signup_activity_your_nickname_edit_text_hint">Your nickname</string>
	<string name="signup_activity_your_spacemail_edit_text_hint">Your spacemail</string>
	<string name="signup_activity_password_edit_text_hint">Password (40+ characters)</string>
	<string name="signup_activity_i_agree_with_interga_text_view_text">I agree with intergalatic terms and conditions</string>
	<string name="signup_activity_sign_up_button_text">SIGN UP</string>
	<string name="signup_activity_already_gave_up_your_text_view_text">Already gave up your soul? </string>
	<string name="signup_activity_log_in_button_text">Log In!</string>
	
	<!-- TimelineActivity -->
	<string name="timeline_activity_title">What\'s up?</string>
	<string name="timeline_activity_menu_item_title">News</string>
	<string name="news_view_holder_spacecrunch_text_view_text">SpaceCrunch</string>
	<string name="news_view_holder_today145_pm_text_view_text">Today, 1:45 PM</string>
	<string name="news_view_holder_melon_husk_launches_text_view_text">Melon Husk launches the first car that can travel a galaxy on a single tank of gas.</string>
	<string name="news_view_holder_spacewoman185k_li_text_view_text">Spacewoman &amp; 185k like this</string>
	<string name="news_view_holder_k_comments_text_view_text">21k comments</string>
	<string name="lifetime_event_view_holder_pluto_posted_anew_ltext_view_text">Pluto posted a new life event</string>
	<string name="lifetime_event_view_holder_in_acomplicated_rel_text_view_text">In a complicated relationship</string>
	<string name="news_two_view_holder_the_good_old_times_text_view_text">The Good Old Times</string>
	<string name="news_two_view_holder_today145_pm_text_view_text">Today, 1:45 PM</string>
	<string name="news_two_view_holder_raiders_from_the_gem_text_view_text">Raiders from the Gemini Cluster are attacking colonial trader ships. When will the Federation step in?</string>
	<string name="news_two_view_holder_varth_dader3k_lik_text_view_text">Varth Dader &amp; 3k like this</string>
	<string name="news_two_view_holder_comments_disabled_by_text_view_text">Comments disabled by the force</string>
	<string name="event_view_holder_text_view_text_view_text">3/13/2050</string>
	<string name="event_view_holder_guess_who_sback_text_view_text">Guess who’s back?</string>
	<string name="event_view_holder_laika_created_anew_text_view_text">Laika created a new event near you</string>
	<string name="event_view_holder_back_from_the_space_text_view_text">Back from the space trip! Come everyone.</string>
	<string name="event_view_holder_john_joe_and_jack_text_view_text">John, Joe and Jack &amp; 18k are coming</string>
	<string name="advertisement_view_holder_spray_and_pray_text_view_text">Spray and Pray</string>
	<string name="advertisement_view_holder_hull_tattoos_anew_text_view_text">Hull tattoos? A new trend to follow in 2050</string>
	<string name="advertisement_view_holder_sponsored_content_text_view_text">Sponsored content</string>
	
	<!-- ProfileActivity -->
	<string name="profile_activity_title">Dr. What Profile</string>
	<string name="profile_activity_menu_item_title">Profile</string>
	<string name="profile_activity_left_item_menu_item_text">Settings</string>
	<string name="profile_activity_dr_what_text_view_text">Dr. What</string>
	<string name="profile_activity_phone_booth_andro_text_view_text">1 Phone Booth, Andromeda</string>
	<string name="profile_activity_traveler_dreamer_text_view_text">Traveler, dreamer, showman. Occasionally gets into fight, not always survives.</string>
	<string name="profile_activity_text_view_text_view_text">365</string>
	<string name="profile_activity_photos_text_view_text">Photos</string>
	<string name="profile_activity_k_text_view_text">58k</string>
	<string name="profile_activity_stalkers_text_view_text">Stalkers</string>
	<string name="profile_activity_text_view_two_text_view_text">326</string>
	<string name="profile_activity_stalking_text_view_text">Stalking</string>
	<string name="profile_activity_latest_photos_text_view_text">LATEST PHOTOS</string>
	
	<!-- ProfilePhotosActivity -->
	<string name="profile_photos_activity_title">Dr. When photos</string>
	<string name="title_view_holder_today_text_view_text">TODAY</string>
	<string name="title_two_view_holder_tomorrow_text_view_text">TOMORROW</string>
	
	<!-- ProfileSettingsActivity -->
	<string name="profile_settings_activity_title">Dr. Where settings</string>
	<string name="profile_settings_activity_menu_item_title">Profile</string>
	<string name="profile_settings_activity_details_text_view_text">DETAILS</string>
	<string name="profile_settings_activity_label_text_view_text">Name</string>
	<string name="profile_settings_activity_text_text_view_text">Dr. Where</string>
	<string name="profile_settings_activity_label_two_text_view_text">Spacemail</string>
	<string name="profile_settings_activity_text_two_text_view_text">tardis~spacemail.io</string>
	<string name="profile_settings_activity_information_text_view_text">INFORMATION</string>
	<string name="profile_settings_activity_label_three_text_view_text">Occasional advertisement</string>
	<string name="profile_settings_activity_text_three_text_view_text">Yes</string>
	<string name="profile_settings_activity_label_four_text_view_text">Logged as</string>
	<string name="profile_settings_activity_label_five_text_view_text">Dr. Where</string>
	<string name="profile_settings_activity_text_four_text_view_text">Log out</string>
	<string name="profile_settings_activity_label_six_text_view_text">Randomize timeline information</string>
	
	<!-- MessagesActivity -->
	<string name="messages_activity_title">Messages</string>
	<string name="messages_activity_menu_item_title">Messages</string>
	<string name="online_person_view_holder_mrs_doya_text_view_text">Mrs. Doya</string>
	<string name="online_person_two_view_holder_jack_text_view_text">Jack</string>
	<string name="online_person_three_view_holder_gideon_text_view_text">Gideon</string>
	<string name="message_view_holder_name_text_view_text">Vulcan</string>
	<string name="message_view_holder_the_needs_of_the_few_text_view_text">The needs of the few outweight the needs of the many.</string>
	<string name="message_two_view_holder_name_text_view_text">Fox Murder</string>
	<string name="message_two_view_holder_i_mtelling_you_the_text_view_text">I’m telling you, they are amongst us! #scared</string>
	<string name="message_three_view_holder_name_text_view_text">Tony Spark</string>
	<string name="message_three_view_holder_how_do_you_go_to_the_text_view_text">How do you go to the bathroom in the suit?</string>
	<string name="message_four_view_holder_name_text_view_text">Lukewarm Skywater</string>
	<string name="message_four_view_holder_the_water_so_testy_ytext_view_text">The water so testy your own dad will kill you for it</string>
	<string name="message_five_view_holder_name_text_view_text">Jack O’ Kneel</string>
	<string name="message_five_view_holder_finally_having_adat_text_view_text">Finally having a date with Pam, took like 10 years.</string>
	<string name="message_six_view_holder_name_text_view_text">Mrs. Doya</string>
	<string name="message_six_view_holder_we_ve_been_forced_to_text_view_text">We’ve been forced to add you a new friend</string>
	
	<!-- EventDetailActivity -->
	<string name="event_detail_activity_title">Guess who\'s back?</string>
	<string name="event_detail_activity_left_item_menu_item_text">Events</string>
	<string name="event_detail_activity_guess_who_sback_text_view_text">Guess who’s back?</string>
	<string name="event_detail_activity_happening_in20h_ba_text_view_text">Happening in 20h, Bajkonur</string>
	<string name="event_detail_activity_event_posted_by_laik_text_view_text">Event posted by Laika</string>
	<string name="event_detail_activity_coming_text_view_text">Coming</string>
	
	<!-- TwoActivity -->
	<string name="two_activity_title">What\'s up?</string>
</resources>