<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data/>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/welcome_constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/welcome_activity_welcome_constraint_layout_background_color">
	
		<ImageView
			android:id="@+id/logo_image_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/welcome_activity_logo_image_view_margin_top"
			android:scaleType="center"
			android:src="@drawable/logo"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="128dp"
			tools:layout_editor_absoluteY="100dp"/>
	
		<TextView
			android:id="@+id/spacebook_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/welcome_activity_spacebook_text_view_margin_top"
			android:fontFamily="@font/font_lato_bold"
			android:gravity="center"
			android:letterSpacing="-0.05"
			android:text="@string/welcome_activity_spacebook_text_view_text"
			android:textColor="@color/welcome_activity_spacebook_text_view_text_color"
			android:textSize="@dimen/welcome_activity_spacebook_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/logo_image_view"
			tools:layout_editor_absoluteX="91dp"
			tools:layout_editor_absoluteY="280dp"/>
	
		<TextView
			android:id="@+id/conquer_the_stars_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/welcome_activity_conquer_the_stars_text_view_margin_top"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="center"
			android:text="@string/welcome_activity_conquer_the_stars_text_view_text"
			android:textColor="@color/welcome_activity_conquer_the_stars_text_view_text_color"
			android:textSize="@dimen/welcome_activity_conquer_the_stars_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/spacebook_text_view"
			tools:layout_editor_absoluteX="96dp"
			tools:layout_editor_absoluteY="350dp"/>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/view_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="@dimen/welcome_activity_view_constraint_layout_height"
			android:layout_marginBottom="@dimen/welcome_activity_view_constraint_layout_margin_bottom"
			android:layout_marginEnd="@dimen/welcome_activity_view_constraint_layout_margin_end"
			android:layout_marginStart="@dimen/welcome_activity_view_constraint_layout_margin_start"
			app:layout_constraintBottom_toTopOf="@+id/supernova_studio_text_view"
			app:layout_constraintHorizontal_weight="0.84"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="30dp"
			tools:layout_editor_absoluteY="484dp">
		
			<LinearLayout
				android:id="@+id/sign_up_button"
				android:layout_width="0dp"
				android:layout_height="@dimen/welcome_activity_sign_up_button_height"
				android:background="@drawable/welcome_activity_sign_up_button_ripple"
				android:gravity="center"
				android:orientation="horizontal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_weight="0.47"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@+id/log_in_button"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp"
				style="@style/Widget.AppCompat.Button">
			
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/icon_sign_up"/>
			
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/welcome_activity_sign_up_button_image_padding"
					android:fontFamily="@font/font_lato_bold"
					android:gravity="center"
					android:text="@string/welcome_activity_sign_up_button_text"
					android:textColor="@color/welcome_activity_sign_up_button_text_color"
					android:textSize="@dimen/welcome_activity_sign_up_button_text_size"/>
			</LinearLayout>
		
			<LinearLayout
				android:id="@+id/log_in_button"
				android:layout_width="0dp"
				android:layout_height="@dimen/welcome_activity_log_in_button_height"
				android:layout_marginStart="@dimen/welcome_activity_log_in_button_margin_start"
				android:background="@drawable/welcome_activity_log_in_button_ripple"
				android:gravity="center"
				android:orientation="horizontal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_weight="0.47"
				app:layout_constraintLeft_toRightOf="@+id/sign_up_button"
				app:layout_constraintRight_toRightOf="parent"
				tools:layout_editor_absoluteX="167dp"
				tools:layout_editor_absoluteY="0dp"
				style="@style/Widget.AppCompat.Button">
			
				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/icon_log_in"/>
			
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/welcome_activity_log_in_button_image_padding"
					android:fontFamily="@font/font_lato_bold"
					android:gravity="center"
					android:text="@string/welcome_activity_log_in_button_text"
					android:textColor="@color/welcome_activity_log_in_button_text_color"
					android:textSize="@dimen/welcome_activity_log_in_button_text_size"/>
			</LinearLayout>
		</android.support.constraint.ConstraintLayout>
	
		<TextView
			android:id="@+id/supernova_studio_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/welcome_activity_supernova_studio_text_view_margin_bottom"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="center"
			android:text="@string/welcome_activity_supernova_studio_text_view_text"
			android:textColor="@color/welcome_activity_supernova_studio_text_view_text_color"
			android:textSize="@dimen/welcome_activity_supernova_studio_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="103dp"
			tools:layout_editor_absoluteY="629dp"/>
	</android.support.constraint.ConstraintLayout>
</layout>