<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/advertisement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/advertisement_view_holder_advertisement_height">
    
        <View
            android:id="@+id/bg_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/advertisement_view_holder_bg_constraint_layout_margin_top"
            android:background="@color/advertisement_view_holder_bg_constraint_layout_background_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="0.76"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp"/>
    
        <ImageView
            android:id="@+id/bg_event_temp_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/advertisement_view_holder_bg_event_temp_image_view_margin_top"
            android:scaleType="center"
            android:src="@drawable/bg_event_temp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp"/>
    
        <TextView
            android:id="@+id/spray_and_pray_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/advertisement_view_holder_spray_and_pray_text_view_margin_start"
            android:layout_marginTop="@dimen/advertisement_view_holder_spray_and_pray_text_view_margin_top"
            android:fontFamily="@font/font_lato_bold"
            android:gravity="start"
            android:lineSpacingMultiplier="1.18"
            android:text="@string/advertisement_view_holder_spray_and_pray_text_view_text"
            android:textColor="@color/advertisement_view_holder_spray_and_pray_text_view_text_color"
            android:textSize="@dimen/advertisement_view_holder_spray_and_pray_text_view_text_size"
            app:layout_constraintLeft_toRightOf="@+id/bg_event_temp_image_view"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="43dp"/>
    
        <TextView
            android:id="@+id/hull_tattoos_anew_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/advertisement_view_holder_hull_tattoos_anew_text_view_margin_end"
            android:layout_marginStart="@dimen/advertisement_view_holder_hull_tattoos_anew_text_view_margin_start"
            android:layout_marginTop="@dimen/advertisement_view_holder_hull_tattoos_anew_text_view_margin_top"
            android:fontFamily="@font/font_lato_regular"
            android:gravity="start"
            android:text="@string/advertisement_view_holder_hull_tattoos_anew_text_view_text"
            android:textColor="@color/advertisement_view_holder_hull_tattoos_anew_text_view_text_color"
            android:textSize="@dimen/advertisement_view_holder_hull_tattoos_anew_text_view_text_size"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintLeft_toRightOf="@+id/bg_event_temp_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spray_and_pray_text_view"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="68dp"/>
    
        <TextView
            android:id="@+id/sponsored_content_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/advertisement_view_holder_sponsored_content_text_view_margin_start"
            android:layout_marginTop="@dimen/advertisement_view_holder_sponsored_content_text_view_margin_top"
            android:alpha="0.4"
            android:fontFamily="@font/font_lato_regular"
            android:gravity="start"
            android:text="@string/advertisement_view_holder_sponsored_content_text_view_text"
            android:textColor="@color/advertisement_view_holder_sponsored_content_text_view_text_color"
            android:textSize="@dimen/advertisement_view_holder_sponsored_content_text_view_text_size"
            app:layout_constraintLeft_toRightOf="@+id/bg_event_temp_image_view"
            app:layout_constraintTop_toBottomOf="@+id/hull_tattoos_anew_text_view"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="93dp"/>
    </android.support.constraint.ConstraintLayout>
</layout>